# rust-mas-backend

./: .gitignore  Cargo.toml  build.rs
src/: agent.rs  authority_agent.rs  disease.rs  main.rs  model_controller_agent.rs  statistic_agent.rs
src/agents/: agent.rs  authority_agent.rs  controller_agent.rs  mod.rs  statistic_agent.rs
src/disease/: disease.rs  mod.rs
src/environment/: mod.rs  regulations.rs  social_network.rs  world.rs
src/messages/: authority_messages.proto  controller_messages.proto  inter_agent_message.proto  message.rs  mod.rs  stats_message.proto
src/messages/authority/: authority_message.rs  mod.rs
src/messages/controller/: mod.rs
src/messages/inter_agent/: Inter_agent_message.rs  inter_agent.proto
