[package]
name = "rust_mas"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9.2"
rand = "0.8.4"
#time = "0.3.2"
#csv = "1.1.6"
#plotters = "0.3.1"
serde = "1.0.130"
bincode = "1.3.3"
serde_json = "1.0.68"
num-integer = "0.1.44"
bytes = "1.1.0"
prost = "0.9.0"
prost-types = "0.9.0"
protobuf = "2.25.2"
log = "0.4.14"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[build-dependencies]
prost-build = "0.9.0"
protoc-rust = "2.25.2"
protobuf-codegen-pure = "2.25.2"